Trying to understand so I can modify to suit my purposes. Not yet understood.

--- a/SplashScreen/SplashScreen.csproj
+++ b/SplashScreen/SplashScreen.csproj
@@ -87,5 +87,8 @@
   <ItemGroup>
     <None Include="Resources\Background.png" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\pixel-cat.gif" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
